Chapter07/7.9.1 calico-ipv4-ipv6-dual-stack.yaml
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: calico-node
  namespace: kube-system
  labels:
    k8s-app: calico-node
spec:
    ......
    spec:
      ......
      containers:
        - name: calico-node
          image: calico/node:v3.15.1
    ......
